Refactor visualization package.

--- a/notebooks/debug_stereo_geometry.ipynb
+++ b/notebooks/debug_stereo_geometry.ipynb
@@ -37,11 +37,17 @@
     "\n",
     "from mynd.visualization import (\n",
     "    WindowHandle,\n",
-    "    create_image_visualizer,\n",
+    "    create_window,\n",
     "    render_image,\n",
     "    destroy_all_windows,\n",
     "    wait_key_input,\n",
     "    colorize_values,\n",
+    ")\n",
+    "\n",
+    "from mynd.visualization import (\n",
+    "    StereoWindows,\n",
+    "    create_stereo_windows,\n",
+    "    render_stereo_geometry,\n",
     ")\n",
     "\n",
     "from mynd.utils.containers import Pair\n",
@@ -84,11 +90,6 @@
     "    disparity_filter: Optional = None\n",
     "\n",
     "\n",
-    "StereoBatchCallback = Callable[\n",
-    "    [StereoGeometryBatch, StereoGeometry, Pair[CameraID]], None\n",
-    "]\n",
-    "\n",
-    "\n",
     "def prepare_stereo_batch(\n",
     "    stereo_camera: StereoCameraGroup, hitnet_path: Path\n",
     ") -> StereoGeometryBatch:\n",
@@ -117,52 +118,6 @@
     "    )\n",
     "\n",
     "    return stereo_batch\n",
-    "\n",
-    "\n",
-    "@dataclass\n",
-    "class StereoWindows:\n",
-    "\n",
-    "    rectified_left: WindowHandle\n",
-    "    rectified_right: WindowHandle\n",
-    "    disparity_left: WindowHandle\n",
-    "    disparity_right: WindowHandle\n",
-    "\n",
-    "\n",
-    "def create_stereo_windows() -> StereoWindows:\n",
-    "    \"\"\"Creates a collection of windows for rendering stereo geometries.\"\"\"\n",
-    "    return StereoWindows(\n",
-    "        rectified_left=create_image_visualizer(\"rectified_left\", 680, 512),\n",
-    "        rectified_right=create_image_visualizer(\"rectified_right\", 680, 512),\n",
-    "        disparity_left=create_image_visualizer(\"disparity_left\", 680, 512),\n",
-    "        disparity_right=create_image_visualizer(\"disparity_right\", 680, 512),\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def render_stereo_geometry(\n",
-    "    windows: StereoWindows, geometry: StereoGeometry\n",
-    ") -> None:\n",
-    "    \"\"\"Render a stereo geometry into a collection of windows.\"\"\"\n",
-    "    # NOTE: Just to remember the types!\n",
-    "    rectified_images: Pair[Image] = geometry.rectified_images\n",
-    "    disparities: Pair[np.ndarray] = geometry.disparities\n",
-    "\n",
-    "    render_image(\n",
-    "        windows.rectified_left, geometry.rectified_images.first.to_array()\n",
-    "    )\n",
-    "    render_image(\n",
-    "        windows.rectified_right, geometry.rectified_images.second.to_array()\n",
-    "    )\n",
-    "\n",
-    "    left_disparities: np.ndarray = colorize_values(\n",
-    "        geometry.disparities.first, lower=0, upper=300, flip=True\n",
-    "    )\n",
-    "    right_disparities: np.ndarray = colorize_values(\n",
-    "        geometry.disparities.second, lower=0, upper=300, flip=True\n",
-    "    )\n",
-    "\n",
-    "    # TODO: Colorize disparities\n",
-    "    render_image(windows.disparity_left, left_disparities)\n",
-    "    render_image(windows.disparity_right, right_disparities)\n",
     "\n",
     "\n",
     "def compute_stereo_geometry_batch(batch: StereoGeometryBatch) -> None:\n",
@@ -250,7 +205,7 @@
     "    # r23m7ms0_20100606_001908, r23m7ms0_20120601_070118, r23m7ms0_20140616_044549\n",
     "\n",
     "    DOCUMENT_PATH: Path = Path(\n",
-    "        \"/data/kingston_snv_01/acfr_metashape_projects/r29mrd5h_with_metadata.psz\"\n",
+    "        \"/data/kingston_snv_01/acfr_metashape_projects/r23m7ms0_aligned_with_metadata.psz\"\n",
     "    )\n",
     "\n",
     "    RANGE_DIRECTORY: Path = Path(\"/data/kingston_snv_01/stereo_test/ranges\")\n",
@@ -261,7 +216,7 @@
     "        \"hitnet_models/hitnet_eth3d_480x640.onnx\"\n",
     "    )\n",
     "\n",
-    "    DEPLOYMENT: str = \"r29mrd5h_20110612_033752\"\n",
+    "    DEPLOYMENT: str = \"r23m7ms0_20140616_044549\"\n",
     "\n",
     "    match backend.load_project(DOCUMENT_PATH):\n",
     "        case Ok(None):\n",
