Start refactoring builder functions for registrators.

--- a/notebooks/dev_registration.ipynb
+++ b/notebooks/dev_registration.ipynb
@@ -10,15 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7b371dd6-fbf6-4edc-97e7-14179ad28726",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/martin/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/kornia/feature/lightglue.py:44: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.\n",
+      "  @torch.cuda.amp.custom_fwd(cast_inputs=torch.float32)\n"
+     ]
+    }
+   ],
    "source": [
     "import copy\n",
     "\n",
     "from functools import partial\n",
-    "from pathlib import Path\n",
     "from time import time\n",
     "\n",
     "from collections.abc import Callable\n",
@@ -31,27 +48,10 @@
     "import open3d.visualization as vis\n",
     "import open3d.utility as util\n",
     "\n",
-    "from mynd.io import read_toml\n",
-    "from mynd.runtime import Environment, load_environment\n",
-    "\n",
-    "from mynd.registration import PointCloud, RegistrationResult\n",
-    "from mynd.registration import PointCloudLoader, create_point_cloud_loader\n",
     "from mynd.registration import MultiTargetIndex, generate_cascade_indices\n",
-    "\n",
     "from mynd.registration import (\n",
     "    downsample_point_cloud,\n",
     "    estimate_point_cloud_normals,\n",
-    ")\n",
-    "\n",
-    "from mynd.registration import (\n",
-    "    PointCloudProcessor,\n",
-    "    GlobalRegistrator,\n",
-    "    IncrementalRegistrator,\n",
-    ")\n",
-    "from mynd.registration import (\n",
-    "    build_point_cloud_processor,\n",
-    "    build_feature_registrator,\n",
-    "    build_icp_registrator,\n",
     ")\n",
     "\n",
     "from mynd.registration import (\n",
@@ -59,12 +59,6 @@
     "    register_colored_icp,\n",
     "    build_pose_graph,\n",
     "    optimize_pose_graph,\n",
-    ")\n",
-    "\n",
-    "from mynd.registration.pipeline import (\n",
-    "    Module,\n",
-    "    ModuleList,\n",
-    "    apply_registration_modules,\n",
     ")\n",
     "\n",
     "from mynd.spatial import decompose_transformation\n",
@@ -89,14 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d9e03428-3e96-4f3c-8a58-5e7df86e3aaa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "environment: Environment = load_environment()\n",
+    "from pathlib import Path\n",
     "\n",
-    "DATA_DIR: Path = Path(\"/home/martin/dev/benthoscan/.cache\")\n",
+    "from mynd.geometry import PointCloud, PointCloudLoader\n",
+    "from mynd.io import read_point_cloud, create_point_cloud_loader\n",
+    "\n",
+    "DATA_DIR: Path = Path(\"/home/martin/dev/mynd/.cache\")\n",
     "\n",
     "point_cloud_files: dict = {\n",
     "    0: DATA_DIR / Path(\"qdc5ghs3_20100430_024508.ply\"),\n",
@@ -105,15 +102,11 @@
     "    3: DATA_DIR / Path(\"qdc5ghs3_20210315_230947.ply\"),\n",
     "}\n",
     "\n",
-    "loaders: dict = {\n",
+    "loaders: dict[int, PointCloudLoader] = {\n",
     "    key: create_point_cloud_loader(path)\n",
     "    for key, path in point_cloud_files.items()\n",
+    "    if path.exists()\n",
     "}\n",
-    "\n",
-    "for key, loader in loaders.items():\n",
-    "    test: PointCloud = loader()\n",
-    "    logger.info(f\"key {key}, loader {loader}, loaded {test}\")\n",
-    "\n",
     "\n",
     "count = len(loaders)\n",
     "if count < 2:\n",
@@ -130,11 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ee3dbb0e-36e2-4f59-8591-dfb566e7ab44",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mynd.registration import RegistrationResult\n",
+    "\n",
+    "\n",
     "def log_registration(\n",
     "    source: int, target: int, result: RegistrationResult\n",
     ") -> None:\n",
@@ -166,48 +162,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "59fa67a2-b3d6-4e51-9967-7df97d9fa2d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Pipeline' from 'mynd.registration' (/home/martin/dev/mynd/src/mynd/registration/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 18\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Builders\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmynd\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mregistration\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     13\u001b[0m     build_point_cloud_processor,\n\u001b[1;32m     14\u001b[0m     build_feature_registrator,\n\u001b[1;32m     15\u001b[0m     build_icp_registrator,\n\u001b[1;32m     16\u001b[0m )\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmynd\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mregistration\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Pipeline\n\u001b[1;32m     21\u001b[0m \u001b[38;5;129m@dataclass\u001b[39m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mRegistrationConfig\u001b[39;00m:\n\u001b[1;32m     23\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Class representing a registration configuration.\"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Pipeline' from 'mynd.registration' (/home/martin/dev/mynd/src/mynd/registration/__init__.py)"
+     ]
+    }
+   ],
    "source": [
-    "CONFIG_FILE: Path = Path(\n",
-    "    \"/home/martin/dev/benthoscan/config/advanced_registration.toml\"\n",
+    "from dataclasses import dataclass\n",
+    "from typing import TypeAlias\n",
+    "\n",
+    "from mynd.io import read_config\n",
+    "\n",
+    "# Processors and registrators\n",
+    "from mynd.registration import (\n",
+    "    PointCloudProcessor,\n",
+    "    GlobalRegistrator,\n",
+    "    IncrementalRegistrator,\n",
     ")\n",
     "\n",
-    "config: dict = read_toml(CONFIG_FILE).unwrap()\n",
+    "# Builders\n",
+    "from mynd.registration import (\n",
+    "    build_point_cloud_processor,\n",
+    "    build_feature_registrator,\n",
+    "    build_icp_registrator,\n",
+    ")\n",
     "\n",
-    "modules: list[Module] = list()\n",
+    "from mynd.registration import Pipeline\n",
     "\n",
-    "for module_config in config[\"modules\"]:\n",
     "\n",
-    "    module_name: str = module_config[\"name\"]\n",
-    "    module_type: str = module_config[\"type\"]\n",
+    "@dataclass\n",
+    "class RegistrationConfig:\n",
+    "    \"\"\"Class representing a registration configuration.\"\"\"\n",
     "\n",
-    "    preprocessors = [\n",
-    "        build_point_cloud_processor(\n",
-    "            model[\"method\"], model[\"parameters\"]\n",
-    "        ).unwrap()\n",
-    "        for model in module_config[\"preprocessors\"]\n",
+    "    @dataclass\n",
+    "    class Module:\n",
+    "        \"\"\"Class representing a config item.\"\"\"\n",
+    "\n",
+    "        preprocessors: list[dict]\n",
+    "        registrator: dict\n",
+    "\n",
+    "    initializer: Module\n",
+    "    incrementors: list[Module]\n",
+    "\n",
+    "\n",
+    "def create_registration_config(config: dict) -> RegistrationConfig:\n",
+    "    \"\"\"Creates a registration pipeline config.\"\"\"\n",
+    "    # TODO: Get initializer modules\n",
+    "    initializer: RegistrationConfig.Module = RegistrationConfig.Module(\n",
+    "        **config.get(\"initializer\")\n",
+    "    )\n",
+    "    # TODO: Get incrementor modules\n",
+    "    incrementors: list[RegistrationConfig.Module] = [\n",
+    "        RegistrationConfig.Module(**item) for item in config.get(\"incrementors\")\n",
     "    ]\n",
+    "    return RegistrationConfig(initializer, incrementors)\n",
     "\n",
-    "    match module_type:\n",
-    "        case \"feature\":\n",
-    "            registrator: GlobalRegistrator = build_feature_registrator(\n",
-    "                module_config[\"registrator\"],\n",
-    "            ).unwrap()\n",
-    "        case \"icp\":\n",
-    "            registrator: IncrementalRegistrator = build_icp_registrator(\n",
-    "                module_config[\"registrator\"],\n",
-    "            ).unwrap()\n",
-    "        case other:\n",
-    "            logger.error(f\"unknown module type: {module_type}\")\n",
-    "            registrator = None\n",
     "\n",
-    "    modules.append(Module(preprocessors=preprocessors, registrator=registrator))\n",
+    "CONFIG_FILE: Path = Path(\n",
+    "    \"/home/martin/dev/mynd/config/registration_simple.toml\"\n",
+    ")\n",
+    "config: dict = read_config(CONFIG_FILE).unwrap()\n",
     "\n",
-    "# TODO: Verify inference of global/incremental module\n",
-    "modules: ModuleList = ModuleList(modules)"
+    "config: RegistrationConfig = create_registration_config(\n",
+    "    config.get(\"registration\")\n",
+    ")\n",
+    "\n",
+    "logger.info(\"---------- Registration ----------\")\n",
+    "logger.info(f\" - Initializer: {config.initializer}\")\n",
+    "logger.info(f\" - Incrementors: {config.incrementors}\")\n",
+    "logger.info(\"----------------------------------\")\n",
+    "\n",
+    "\n",
+    "# TODO: Build global registrator\n",
+    "initializer = build_feature_registrator(config.initializer.registrator).unwrap()\n",
+    "\n",
+    "logger.info(initializer)\n",
+    "\n",
+    "# TODO: Build incremental registrators\n",
+    "# registrator: IncrementalRegistrator = build_icp_registrator(\n",
+    "#    module_config[\"registrator\"],\n",
+    "# ).unwrap()\n",
+    "\n",
+    "# build_point_cloud_processor(\n",
+    "#    model[\"method\"], model[\"parameters\"]\n",
+    "# ).unwrap()"
    ]
   },
   {
@@ -514,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
